--- a/joyeuxhalloween.html
+++ b/joyeuxhalloween.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
-
 <html lang="fr">
-
+    
 <head>
-
   <meta charset="utf-8">
-  <title>Halloween Git Project 2022 - Joyeux Halloween</title>
+  <title>Halloween Git 2022 Landing Page</title>
   <link href="style.css" rel="stylesheet" />
-  
 </head>
 
 <body>
 
   <script src=""></script>
-
+  <div>
+    <img id="ImageHalloween" src="https://cdn.toutpratique.com/img/cms/Nouveau%20dossier/septembre%20octobre%2021/halloween-10-exemples-texte-gratuit-joyeux-halloween-10-cartes-pour-halloween-toutpratique.jpg">
+  </div>
+  <script>
+  </script>
+  <style>
+    html {
+/* L'image est positionnée en fond et est centrée */
+background: url(https://images6.alphacoders.com/552/552086.jpg) no-repeat center center fixed;
+/* Ajout de la propriété avec les préfixes pour tous les moteurs de rendu */
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+    #ImageHalloween{
+      padding: 10px 50px;
+      border: none;
+      border-radius: 10px;
+      display: block;
+      margin : 0 auto;
+    }
+  </style>
 </body>
 </html>
