Replaced Italian Page by a Russian Page

--- a/feliz halloween.html
+++ b/feliz halloween.html
@@ -5,7 +5,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Halloween Git Project 2022 - Feliz halloween</title>
+  <title>Halloween Git Project 2022 - SchastlivogoHalloween</title>
   <link href="style.css" rel="stylesheet" />
   
 </head>
