--- a/SchastlivogoHalloween.html
+++ b/SchastlivogoHalloween.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
+
 <html lang="fr">
-    
+
 <head>
+
   <meta charset="utf-8">
-  <title>Halloween Git 2022 Landing Page</title>
+  <title>Halloween Git Project 2022 - Schastlivogo Halloween</title>
   <link href="style.css" rel="stylesheet" />
+  
 </head>
 
 <body>
 
   <script src=""></script>
   <div>
-    <img id="ImageHalloween" src="https://img1.picmix.com/output/pic/normal/7/7/5/3/3523577_94e65.gif">
+    <img id="ImageHalloween" src="https://lh3.googleusercontent.com/FvcGWrguyokhg_DbxqbmRuWlx7vDkWUvqEpLWYaWgiGOYCQGidAQBlt4O8yam9iuADUkD6jJYY05nNHi0Ju_dWrs-9FvIubZRnBk4OcIdr1CQwwovsDe8y46WsWsBHqeyV7HQ9QYoULfzeYf-tqLVVJZh7ZG5WRpOrxijrJhMeYE2jQo1Un_cVuTiNgihIkPQXKIYgDqeNV1wQ9nqR-3wex6ZFTsNmEZW8TGJtNakCZ0Dk3Pow8f1Ehx4PeW83Hbus4ZyqZ71eihvU_KMGE10E4AGjrY28r1eEP5g98rtPMfc4Xgk45qN2lco1y_hM_OqiMBCRa-yWgWesl-JCE_6srF6VJuEswG22IvjeEKfZvc_28nWA74-3k6A9IhudfM5J13Bg-c59EBJioJf7zL0ABe1ryF9kDpMVQSs6ox6ng5pxV6sKOWOtVi1zUZa9V7SgAettoGoSC_y8gAzwwS-Tx5nvVAONp78_FWxolUQAblarOIEApM8H-A_36gxG68YVX3nQluKwA_6GuRswbfQwzYT6WoPPBkubNUYidDpAzTun9eBLCtkIBq0qktQhr0DlGII23WI7VO3nxaHJ0OTPcamyW4N61vdzrTHMaReJMiS-u2Xz1YPztgDFfULjHciw0SYMmXN1b_gkPmI9hZppZPrRJFEI5tcYeLKB37txn7wHD46y7th3q8mQw_9x5DJn61gyXBKiY6ZmRzSMYlAFkrdsE2TJAUj9BbzbpczYojteVteJJ_ETSxLMAhPuCuILQMGNSTbig-vkv8VVpcTTIQpKASusZfbi-a5K10ZKLeEqj33FCtVEhh5jmRxSe0LgYNplMqPz6M0ISrdOIHH3FTcIcEU-bLxcpm2YwEZJv-IUs6ciqzyI4FW-yCbH3xpBSC_oTmQY6HGtOOiCHnUrdX7qkL82pg1Li8fojYoAOo-v7K5EE-hOQsXFqYJh8t2dWXEQB_AQx8q7jsouuzxaaLletHX63o7zf-ESkCLYPJ9PenAdfn12u1=w856-h81-no?authuser=0">
   </div>
   <script>
   </script>
@@ -31,6 +34,7 @@ background-size: cover;
       border-radius: 10px;
       display: block;
       margin : 0 auto;
+      width: 1200px;
     }
   </style>
 </body>
