--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
 
   <script src=""></script>
-  <button id="BoutonHalloween">Envie d'une petite frayeure?</button>
+  <button onclick="window.location.href = 'joyeuxhalloween.html'" id="BoutonHalloween">Envie d'une petite frayeure? - FR</button>
+  <button onclick="window.location.href = 'HappyHalloween.html'" id="BoutonHalloween">Fancy a little scare? - EN</button>
+  <button onclick="window.location.href = 'feliz halloween.html'" id="BoutonHalloween">¿Te apetece un pequeño susto? - ES</button>
+  <button onclick="window.location.href = 'FröhlichesHalloween.html'" id="BoutonHalloween">Lust auf ein bisschen Schrecken? - DE</button>
+  <button onclick="window.location.href = 'felizdiasdas bruxas.html'" id="BoutonHalloween">Quer um pouco de susto? - PO</button>
+  <button onclick="window.location.href = 'Wesołego Halloween.html'" id="BoutonHalloween">Хотите немного испуга? - RU</button>
+  <button onclick="window.location.href = 'SchastlivogoHalloween.html'" id="BoutonHalloween">Zin in een beetje schrikken? - NE</button>
   <script>
   </script>
   <style>
@@ -31,7 +37,7 @@ background-size: cover;
       border: none;
       border-radius: 10px;
       display: block;
-      margin : 50vmax auto;
+      margin : 20px auto;
     }
   </style>
 </body>
