--- a/feliz halloween.html
+++ b/feliz halloween.html
@@ -31,6 +31,7 @@ background-size: cover;
       border-radius: 10px;
       display: block;
       margin : 0 auto;
+      height: 800px;
     }
   </style>
 </body>
