--- a/felizdiasdas bruxas.html
+++ b/felizdiasdas bruxas.html
@@ -13,5 +13,29 @@
 <body>
 
   <script src=""></script>
-
+  <div>
+    <img id="ImageHalloween" src="https://m.media-amazon.com/images/I/81pCSogH2CL._SS500_.jpg">
+  </div>
+  <script>
+  </script>
+  <style>
+    html {
+/* L'image est positionnée en fond et est centrée */
+background: url(https://images6.alphacoders.com/552/552086.jpg) no-repeat center center fixed;
+/* Ajout de la propriété avec les préfixes pour tous les moteurs de rendu */
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+    #ImageHalloween{
+      padding: 10px 50px;
+      border: none;
+      border-radius: 10px;
+      display: block;
+      margin : 0 auto;
+      height: 800px;
+    }
+  </style>
 </body>
+</html>
