On est vraiment pas passé loin, même si la structure est pourrie, le site est opérationnel

--- a/HappyHalloween.html
+++ b/HappyHalloween.html
@@ -3,7 +3,7 @@
     
 <head>
   <meta charset="utf-8">
-  <title>Halloween Git 2022 Landing Page</title>
+  <title>Halloween Git Project 2022 - Happy Halloween</title>
   <link href="style.css" rel="stylesheet" />
 </head>
 
