--- a/feliz halloween.html
+++ b/feliz halloween.html
@@ -3,7 +3,7 @@
     
 <head>
   <meta charset="utf-8">
-  <title>Halloween Git Project 2022 - SchastlivogoHalloween</title>
+  <title>Halloween Git Project 2022 - feliz halloween</title>
   <link href="style.css" rel="stylesheet" />
 </head>
 
