--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <button onclick="window.location.href = 'felizdiasdas bruxas.html'" id="BoutonHalloween">Quer um pouco de susto? - PO</button>
   <button onclick="window.location.href = 'Wesołego Halloween.html'" id="BoutonHalloween">Хотите немного испуга? - RU</button>
   <button onclick="window.location.href = 'SchastlivogoHalloween.html'" id="BoutonHalloween">Zin in een beetje schrikken? - NE</button>
+  <button onclick="window.location.href = 'Јоиеук Халловеен.html'" id="BoutonHalloween">Енвие д'уне петите фраиеуре? - SE</button>
   <script>
   </script>
   <style>
