--- a/Wesołego Halloween.html
+++ b/Wesołego Halloween.html
@@ -5,7 +5,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Halloween Git Project 2022 - Joyeux Halloween</title>
+  <title>Halloween Git Project 2022 - Wesołego Halloween</title>
   <link href="style.css" rel="stylesheet" />
   
 </head>
